--- a/Background.tex
+++ b/Background.tex
@@ -44,7 +44,8 @@ see the board because it was side-on to him then he would be able to
 proceed.
 \end{comment}
 
-The next major enhancement of these signals came in the form of the \textbf{Semaphore} fixed signal.  Instead of having 2 positions (visible/ not visible), the boards of a semaphore signal could be moved into one of several predetermined positions. The 
+The next major enhancement of these signals came in the form of the \textbf{Semaphore} fixed signal.  Instead of having 2 positions (visible/ not visible), the boards of a semaphore signal could be moved into one of several predetermined positions. The most common of these signals had 3 visible positions or aspects in which they could be placed which would rely the following information to an approaching driver: proceed if its safe, proceed with caution if its safe and stop.
+
 \begin{comment}
 One of the major developments in railway signalling was the introduction of
 the \textbf{Semaphore} fixed signal. These consisted of a board that could be
@@ -54,8 +55,10 @@ proceed, another that indicates the driver can proceed with caution and
 finally an aspect which indicates that the driver should stop. 
 \end{comment}
 
+The introduction of the semaphore signal also foreshadowed another major change in the system for controlling the signals behind the scenes.  A new band of professional \textbf{Signallers} were employed to specifically manage the railways, replacing the Policemen that proceeded them in the progress. The efficiency of signal control was also improved by a system of wires, pulleys and levers which enabled multiple signals and points to be controlled from a central position. This central position was typically enclosed in a box giving rise to the name \textbf{signal box} which were typically manned by one or more signallers. The controlling signals and points from the centrality of the signal box also enabled for more safety mechanisms to be installed. The most prominent of these the \textbf{interlocking} shall be the subject of interest to us in later chapters. The interlocking physically prevented the control system of a railway from unsafe state by physically locking levers.
 
 
+\begin{comment}
 Around about the same time as the introduction of the semaphore signal, the system
 for controlling the signals went under drastic change. The Policemen were
 replaced with professional \textbf{Signallers} whose job was specifically to
@@ -66,6 +69,8 @@ manned by one or more signallers. This centralisation allowed for further
 safety mechanisms to be installed. One in particular, namely the \textbf{interlocking},
 is of interest to us. The interlocking physically locked levers if they were
 unsafe to move.
+\end{comment}
+
 
 The next leap in railway technology came from the invention of the electronic
 \textbf{track circuit}. These would activate an indicator in the signal box if a
