--- a/Background.tex
+++ b/Background.tex
@@ -71,7 +71,7 @@ is of interest to us. The interlocking physically locked levers if they were
 unsafe to move.
 \end{comment}
 
-
+\begin{comment}
 The next leap in railway technology came from the invention of the electronic
 \textbf{track circuit}. These would activate an indicator in the signal box if a
 segment of track was occupied by a train. As more and more track circuits
@@ -83,6 +83,8 @@ removing a large amount of physical work performed by signallers allowing for
 a greater area of control for each signaller.  Around this time
 electromechanical \textbf{relays} began to replace purely mechanical relays
 reducing the amount of space needed for a signal box.
+\end{comment}
+
 
 In the 1920s \textbf{colour light signals} replaced mechanical semaphore signals these where much brighter than the oil
 lamps fitted to semaphores and greatly increased the safety of night time
