rewrote more background

--- a/Background.tex
+++ b/Background.tex
@@ -70,7 +70,7 @@ safety mechanisms to be installed. One in particular, namely the \textbf{interlo
 is of interest to us. The interlocking physically locked levers if they were
 unsafe to move.
 \end{comment}
-
+The advent of electricity brough about a further advance in railway technology, allowing for the development of the \textbf{track circuit}. When a train was on a segment of track it completed the circuit between the two rails and light up an indicator in the signal box. As more track circuits were deployed it became possible to control certain signals without human intervention. These \textbf{automatic signals} were completely operated by track circuits and prevented trains from entering a segment of track behind a signal already containing a train. Electric motors enabled the construction of electric point machines enabling the signaller to electronically control a point at a great distance with little physical effort. The area control by each signal box was greatly increased along with the number of signals controlable by one signaller. Electromechanical \textbf{relays} were introduced as a replacement for the soley mechanical relays reducing the size of each signal box and its footprint on the landscape.
 \begin{comment}
 The next leap in railway technology came from the invention of the electronic
 \textbf{track circuit}. These would activate an indicator in the signal box if a
@@ -85,7 +85,10 @@ electromechanical \textbf{relays} began to replace purely mechanical relays
 reducing the amount of space needed for a signal box.
 \end{comment}
 
+Another instance of an electrical system replacing a mechanical one occured in the 1920s. New \textbf{colour light signals} replaced  the mechanical semaphore signals and had the advantage of being brighter than the oil lamps of that signal.
 
+
+\begin{comment}
 In the 1920s \textbf{colour light signals} replaced mechanical semaphore signals these where much brighter than the oil
 lamps fitted to semaphores and greatly increased the safety of night time
 train travel. In the 1930s the mechanical levers were replaced with an electronic \textbf{control panel}
@@ -98,7 +101,7 @@ place. The advent of electronic microprocessors enabled the replacement of the
 relay and mechanical interlockings with an electronic \textbf{solid state interlocking}
 system (SSI) \cite{AC08}. The main focus of this project will be to investigate the safety
 of such solid state interlockings.
-
+\end{comment}
 \section{Invensys Rail}
 
 Invensys Rail \cite{Inven} and its previous incarnation Westinghouse Rail Systems Ltd have been
