Updated the ERTMS chapter. added conclusion and future work to maude section

--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -1,6 +1,6 @@
 \thesischapter{Background: The European Rail Traffic Management System}
 
-Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communication to gain a much finer control than the tradition discrete solid state interocking and their boolean track circuits would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the tradition discrete control systems of the railway with continuous systems. This new system consists of a \emph{radio block processor} which negotiates with the tradition interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). Trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor.
+Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the tradition discrete solid state interocking and their boolean track circuits would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the tradition discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the tradition interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The Trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour that allow for different stages of delivery. In the most advanced level 3 all trains must be equiped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. In this thesis we are mainly concerned with the ERTMS level 2 which is modelled and verified in a later chapter.
 
 
 \subsection*{ERTMS levels}
@@ -112,7 +112,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{figure}
 \end{center}
 
-\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2})  Movement authorities are calucated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train and the train gives its location relative to a given balise This transmission is complemented by on the spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train.  .\\
+\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to stil run on the length of track but can be removed if no such trains are running. Movement authorities are calucated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train and the train gives its location relative to a given balise This transmission is complemented by on the spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. \
 
 
 
@@ -340,9 +340,10 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{center}
 
 
+\subsection*{Static Speed Profile}
+Traditionally the speed limit along a segment of track was controlled by a combination of speed limit signs at the side of the tracks. In ERTMS this has been replaced by a \emph{static speed profile} which provides the control system on the train with a maximum speed for a given section of track. Each type of train has its own static speed profile depending what it is capable of, for instance a high speed intercity train will have a different static speed profile from a fully loaded freight train. Proving the trains with a static speed profile increases safety further by making speeding less likely and allows for a finer control of the trains speed increasing the capacity of the line.
 
-
-\subsection*{Movement Authorities}
+\subsection*{Movement Authority}
 There are two different types of movement authorities used to restrict the movement of a train along a piece of track (See Figure \ref{fig:trackplan}).
 \begin{description}
 
