--- a/lit.bib
+++ b/lit.bib
@@ -23,6 +23,19 @@
   pages = {359-405}
 }
 
+@INPROCEEDINGS{PO07,
+  author = {{\"O}lveczky, P. C. and Thorvaldsen, S.},
+  title = {Formal Modeling and Analysis of the {OGDC} Wireless Sensor Network
+	Algorithm in Real-Time Maude},
+  booktitle = {Formal Methods for Open Object-Based Distributed Systems},
+  year = {2007},
+  editor = {Bonsangue, M. M. and Johnsen, E. B.},
+  volume = {4468},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {122--140},
+  publisher = {Springer Berlin Heidelberg}
+}
+
 @INCOLLECTION{GS06,
   author = {Abdulla, P. and Deneux, J. and St{\aa}lmarck, G. and {\AA}gren, H.
 	and {\AA}kerlund, O.},
@@ -589,6 +602,21 @@
   year = {1980},
   editors = {Hindley, J.R. and Seldin, J.P.},
   publisher = {Academic Press, Orlando, Fla}
+}
+
+@INPROCEEDINGS{DI13,
+  author = {Ishii, D. and Melquiond, G. and Nakajima, S.},
+  title = {Inductive Verification of Hybrid Automata with Strongest Postcondition
+	Calculus},
+  booktitle = {Proceedings of the 10th International Conference on Integrated Formal
+	Methods},
+  year = {2013},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  pages = {139--153},
+  publisher = {Springer Berlin Heidelberg},
+  colume = {7940},
+  owner = {andylawrence},
+  timestamp = {2014.03.01}
 }
 
 @ARTICLE{PJ10,
@@ -1173,16 +1201,3 @@
   timestamp = {2014.03.01}
 }
 
-@InProceedings{DI13,
-  author = {Ishii, D. and Melquiond, G. and Nakajima, S.},
-  title = {Inductive Verification of Hybrid Automata with Strongest Postcondition
-	Calculus},
-  booktitle = {Proceedings of the 10th International Conference on Integrated Formal Methods},
-  series = {{L}ecture {N}otes in {C}omputer {S}cience},
-  colume = {7940},
-  year = {2013},
-  pages = {139--153},
-  publisher = {Springer Berlin Heidelberg},
-  owner = {andylawrence},
-  timestamp = {2014.03.01}
-}
